tests/snapshots/formatter__function_body_wide_if_condition_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
f <- function() {
  if (some_long_condition_function(
    aaaaaaaa,
    bbbbbbbb,
    cccccccc,
    dddddddd,
    eeeeeeee,
    ffffffff,
    gggggggg,
    hhhhhhhh
  )) x
}
