tests/snapshots/formatter__function_body_wide_if_condition_nested_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
result <- lapply(items, function(x) {
  if (some_long_condition_function(
    aaaaaaaa,
    bbbbbbbb,
    cccccccc,
    dddddddd,
    eeeeeeee,
    ffffffff
  )) {
    x
  }
})
