tests/snapshots/formatter__if_call_argument_braces_at_indent_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
f <- function() {
  switch(coord, x = {
    if (is.null(x)) {
      x <- with(
        ranges,
        if (lower) {
          x[1] - 0.075 * line * diff(x)
        } else {
          x[2] + 0.075 * line * diff(x)
        }
      )
    }
  })
}
