tests/snapshots/formatter__if_condition_comment_forms_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
if (
  x # trailing
) {
  a
}
if (
  # leading
  y
) {
  b
}
# while trailing
while (cond) {
  c
}
