tests/snapshots/formatter__if_else_if_bare_flat_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
if (condition) this else if (condition2) this2 else that
x <- if (a) 1 else if (b) 2 else 3
