tests/snapshots/formatter__if_else_if_chain_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
if (is.null(a)) {} else if (a) {
  1
} else {
  0
}
