tests/snapshots/formatter__if_else_wide_bare_branches_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
x <- if (cond) {
  some_function(argument_one, argument_two, argument_three, arg_four)
} else {
  other(b)
}
