tests/snapshots/formatter__if_function_body_wide_if_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
f <- function() {
  if (cond) {
    some_function(argument_one, argument_two, argument_three, argument_four)
  }
}
