tests/snapshots/formatter__paren_own_line_comment_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
x <- (
  a
  # own line
)
y <- (
  f(b)
  ## tail note
)
