tests/snapshots/formatter__paren_trailing_comment_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
ignore <- (tagged &&
  (
    separated || pretag == "\\cr" # '\cr\cr{ref}' relicts
  ))
x <- (
  a # note
)
